2011-08-15  Adam Barth  <abarth@webkit.org>

        Note that this new test fails.

        * platform/chromium/test_expectations.txt:

2011-08-15  Adam Barth  <abarth@webkit.org>

        Remove expectation for this test, which no longer exists.

        * platform/chromium/test_expectations.txt:

2011-08-15  Adam Barth  <abarth@webkit.org>

        Add new passing expectations.

        * platform/chromium/fast/js/kde/operators-expected.txt: Added.

2011-08-15  Gavin Barraclough  <barraclough@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=66263
        DFG JIT does not always zero extend boolean result of DFG operations

        Reviewed by Sam Weinig.

        * fast/js/kde/script-tests/operators.js:
        (nonSpeculativeNotInner):
        (nonSpeculativeNot):
        (nonSpeculativeLessInner):
        (nonSpeculativeLess):
        (nonSpeculativeLessEqInner):
        (nonSpeculativeLessEq):
        (nonSpeculativeGreaterInner):
        (nonSpeculativeGreater):
        (nonSpeculativeGreaterEqInner):
        (nonSpeculativeGreaterEq):
        (nonSpeculativeEqualInner):
        (nonSpeculativeEqual):
        (nonSpeculativeNotEqualInner):
        (nonSpeculativeNotEqual):
        (nonSpeculativeStrictEqualInner):
        (nonSpeculativeStrictEqual):
        (nonSpeculativeStrictNotEqualInner):
        (nonSpeculativeStrictNotEqual):
            - Add tests cases that will hit the non-spec path.

2011-08-15  Alexey Proskuryakov  <ap@apple.com>

        Committed by accident, restoring the test.

        * editing/deleting/delete-3928305-fix.html:

2011-08-15  Alexey Proskuryakov  <ap@apple.com>

        Regional indicator symbols that are combined should behave as a single character when editing
        https://bugs.webkit.org/show_bug.cgi?id=65395

        Reviewed by Dan Bernstein.

        * editing/deleting/regional-indicators-expected.txt: Added.
        * editing/deleting/regional-indicators.html: Added.
